; ModuleID = '/home/carl/AnghaBench/vlc/modules/services_discovery/extr_microdns.c_OpenSD.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/services_discovery/extr_microdns.c_OpenSD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, %struct.discovery_sys* }
%struct.discovery_sys = type { i32 }

@VLC_ENOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"mDNS Network Discovery\00", align 1
@CFG_PREFIX = common dso_local global i32 0, align 4
@ppsz_options = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @OpenSD to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @OpenSD(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca %struct.discovery_sys*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = bitcast i32* %6 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %4, align 8
  %8 = call %struct.discovery_sys* @calloc(i32 1, i32 4)
  store %struct.discovery_sys* %8, %struct.discovery_sys** %5, align 8
  %9 = load %struct.discovery_sys*, %struct.discovery_sys** %5, align 8
  %10 = icmp ne %struct.discovery_sys* %9, null
  br i1 %10, label %13, label %11

11:                                               ; preds = %1
  %12 = load i32, i32* @VLC_ENOMEM, align 4
  store i32 %12, i32* %2, align 4
  br label %30

13:                                               ; preds = %1
  %14 = load %struct.discovery_sys*, %struct.discovery_sys** %5, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 2
  store %struct.discovery_sys* %14, %struct.discovery_sys** %16, align 8
  %17 = call i32 @_(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  store i32 %17, i32* %19, align 4
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %21 = load i32, i32* @CFG_PREFIX, align 4
  %22 = load i32, i32* @ppsz_options, align 4
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @config_ChainParse(%struct.TYPE_3__* %20, i32 %21, i32 %22, i32 %25)
  %27 = load i32*, i32** %3, align 8
  %28 = load %struct.discovery_sys*, %struct.discovery_sys** %5, align 8
  %29 = call i32 @OpenCommon(i32* %27, %struct.discovery_sys* %28, i32 0)
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %13, %11
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local %struct.discovery_sys* @calloc(i32, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @config_ChainParse(%struct.TYPE_3__*, i32, i32, i32) #1

declare dso_local i32 @OpenCommon(i32*, %struct.discovery_sys*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
